Fix CORS and update backend API

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Real Estate Platform - Find your dream property"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Real Estate Platform</title><script defer="defer" src="/static/js/main.ff0fe456.js"></script><link href="/static/css/main.d00bed1b.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="/estate-ecommerce-project/favicon.ico"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
+    <meta name="description" content="Real Estate Platform - Find your dream property"/>
+    <link rel="apple-touch-icon" href="/estate-ecommerce-project/logo192.png"/>
+    <link rel="manifest" href="/estate-ecommerce-project/manifest.json"/>
+    <title>Propify</title>
+        <script defer="defer" src="/estate-ecommerce-project/static/js/main.d6e71950.js">
+        </script>
+        <link href="/estate-ecommerce-project/static/css/main.9c696ff6.css" rel="stylesheet">
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root">
+        </div>
+    </body>
+</html>
